top spacing fix

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -435,7 +435,7 @@ text-align: left;
 
 
 .top {
-    padding-top: 75px;
+    padding-top: 150px;
 }
 
 
